--- a/code/app/src/main/res/values/strings.xml
+++ b/code/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ListyCityLab3</string>
+    <string name="cities">Cities</string>
+    <string name="todo">TODO</string>
 </resources>
